--- a/nginx.conf
+++ b/nginx.conf
@@ -50,8 +50,8 @@ http {
         location = /50x.html {
         }
 
-        location / {
-                proxy_pass http://127.0.0.1:5000/db;
+        location ~ ^/(.*)$ {
+                proxy_pass http://127.0.0.1:5000;
         }
     }
 
